src/Base/main/default/objects/PublicCalendars__c/PublicCalendars__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Public calendars available to everyone in Legend</description>
    <label>Public Calendars</label>
</CustomObject>