src/Base/main/default/objects/PublicCalendars__c/fields/CalendarId__c.field-meta.xml
<CustomField>
    <fullName>CalendarId__c</fullName>
    <externalId>true</externalId>
    <label>CalendarId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>