src/Base/main/default/objects/PublicCalendars__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>The label of the calendar</description>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>