src/Base/main/default/objects/PublicCalendars__c/fields/Related_SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_SObject_Name__c</fullName>
    <description>The sObject Name which the Event will be associated to</description>
    <label>Related SObject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>